--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,22 @@
     <color name="colorAccent">#9E9E9E</color>
     <color name="primary">#F44336</color>
     <color name="primary_dark">#D32F2F</color>
+    <color name="fab">#607D8B</color>
+
+    <color name="text_primary">#212121</color>
+    <color name="bkg_card">#8C9EFF</color>
+    <color name="background">#E3E3E3</color>
+    <color name="white">#FAFAFA</color>
+    <color name="white_pressed">#F1F1F1</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="black_semi_transparent">#B2000000</color>
+
+    <color name="card_blue">#00BED4</color>
+    <color name="card_green">#8CC24A</color>
+    <color name="card_red">#DE6262</color>
+    <color name="card_orange">#FF7043</color>
+
     <color name="primary_light">#FFCDD2</color>
     <color name="accent">#9E9E9E</color>
     <color name="primary_text">#212121</color>
