--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -72,7 +72,7 @@
                     android:maxWidth="80dp"
                     android:maxHeight="80dp"
                     android:src="@drawable/about_javiersantos" />-->
-                <com.appman.appmanager.utils.CircularImage
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
