--- a/app/src/main/res/layout/process_activity.xml
+++ b/app/src/main/res/layout/process_activity.xml
@@ -39,47 +39,58 @@
             android:textSize="22sp"/>
 
     </LinearLayout>-->
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/app_card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        android:background="@color/icons"
+        android:layout_height="60dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_margin="5dp"
         android:layout_below="@+id/toolbar"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/lnrlytRamInfo"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_centerHorizontal="true">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/total_ram"
-            android:id="@+id/textViewTotalRam"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:padding="5dp"
-            android:textColor="@color/colorAccent"
-            android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:gravity="center"
+            android:id="@+id/lnrlytRamInfo"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/available_ram"
-            android:id="@+id/textViewUsedRam"
-            android:padding="5dp"
-            android:textColor="@color/colorAccent"
-            android:layout_weight="1"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/total_ram"
+                android:id="@+id/textViewTotalRam"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="5dp"
+                android:textColor="@color/colorAccent"
+                android:layout_weight="1"/>
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/available_ram"
+                android:id="@+id/textViewUsedRam"
+                android:padding="5dp"
+                android:textColor="@color/colorAccent"
+                android:layout_weight="1"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
     <LinearLayout
         android:id="@+id/lnrlytRunningPro"
-        android:layout_below="@+id/lnrlytRamInfo"
+        android:layout_below="@+id/app_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -115,6 +126,14 @@
             android:fontFamily="sans-serif-thin"
             android:background="@drawable/rounded_patch"/>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"
+        android:id="@+id/view"
+        android:layout_below="@+id/lnrlytRunningPro"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"/>
     <com.pnikosis.materialishprogress.ProgressWheel
         android:id="@+id/progress"
         android:layout_below="@+id/lnrlytRunningPro"
@@ -151,10 +170,10 @@
         android:background="@color/colorPrimary"
         android:text="@string/clean_ram"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/lnrlytRamInfo"
-        android:layout_alignEnd="@+id/lnrlytRamInfo"
-        android:layout_alignLeft="@+id/lnrlytRamInfo"
-        android:layout_alignStart="@+id/lnrlytRamInfo"
+        android:layout_alignRight="@+id/view"
+        android:layout_alignEnd="@+id/view"
+        android:layout_alignLeft="@+id/view"
+        android:layout_alignStart="@+id/view"
         android:layout_marginTop="5dp"/>
 
 </RelativeLayout>
