--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -81,7 +81,7 @@
                 android:text="com.javiersantos"
                 android:fontFamily="sans-serif-thin"
                 android:textColor="@color/text_primary"
-                android:gravity="center"
+                android:gravity="center_vertical|center"
                 android:layout_marginLeft="@dimen/horizontal_margin"
                 android:layout_marginRight="@dimen/horizontal_margin"/>
         </android.support.v7.widget.CardView>
