--- a/app/src/main/res/layout/app_layout.xml
+++ b/app/src/main/res/layout/app_layout.xml
@@ -36,7 +36,8 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="40dp"
                 android:text="Package"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:gravity="center_vertical"/>
             <ImageView
                 android:id="@+id/imgIcon"
                 android:layout_height="wrap_content"
