--- a/app/src/main/res/layout/process_info_list_item.xml
+++ b/app/src/main/res/layout/process_info_list_item.xml
@@ -11,9 +11,10 @@
         android:layout_height="60dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_margin="5dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/appNameText"
                 android:fontFamily="sans-serif-thin"
@@ -27,8 +28,9 @@
                 android:text="App"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textSize="18sp" />
-        </RelativeLayout>
+                android:textSize="18sp"/>
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
