--- a/app/src/main/res/layout/process_activity.xml
+++ b/app/src/main/res/layout/process_activity.xml
@@ -8,146 +8,119 @@
     <include android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="left"
-        android:padding="10dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/memory_slot_100"
-            android:contentDescription="@string/action_ram"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/action_ram"
-            android:gravity="center_vertical"
-            android:fontFamily="sans-serif-thin"
-            android:layout_gravity="left"
-            android:drawableLeft="@mipmap/memory_slot_100"
-            android:drawablePadding="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="22sp"/>
-
-    </LinearLayout>-->
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/app_card"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_margin="5dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/toolbar"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="2"
-            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="5dp"
+            android:padding="5dp"
+            android:text="@string/ram_status"
+            android:textColor="@color/card_blue"
+            android:textSize="24sp"/>
+
+        <RelativeLayout
             android:id="@+id/lnrlytRamInfo"
-            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:gravity="right"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textViewTotalRam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="right"
+                android:padding="5dp"
+                android:text="@string/ram_calculation"
+                android:textColor="@color/colorAccent"
+                android:textSize="22sp" />
+
+            <com.gc.materialdesign.views.ProgressBarDeterminate
+                android:id="@+id/progressBar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/total_ram"
-                android:id="@+id/textViewTotalRam"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:padding="5dp"
-                android:textColor="@color/colorAccent"
-                android:layout_weight="1"/>
+                android:layout_below="@+id/textViewTotalRam"
+                android:background="@color/card_green"
+                android:max="100"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/available_ram"
-                android:id="@+id/textViewUsedRam"
-                android:padding="5dp"
-                android:textColor="@color/colorAccent"
-                android:layout_weight="1"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
-    <com.gc.materialdesign.views.ProgressBarDeterminate
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_below="@+id/app_card"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="gone">
-    </com.gc.materialdesign.views.ProgressBarDeterminate>
+
     <LinearLayout
         android:id="@+id/lnrlytRunningPro"
-        android:layout_below="@+id/app_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/app_card"
         android:orientation="horizontal"
         android:weightSum="2">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Running Processes"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-thin"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"
+            android:layout_marginEnd="70dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
             android:layout_marginRight="70dp"
-            android:layout_marginEnd="70dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-thin"
+            android:singleLine="true"
+            android:text="Running Processes"
+            android:textSize="18sp"/>
         <TextView
+            android:id="@+id/txtViewRunningProcessCount"
             android:layout_width="10dp"
             android:layout_height="28dp"
-            android:id="@+id/txtViewRunningProcessCount"
-            android:text="25"
-            android:gravity="center"
-            android:textColor="@color/icons"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginRight="70dp"
-            android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="70dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:textStyle="bold"
+            android:background="@drawable/thread_count_box_light"
             android:fontFamily="sans-serif-thin"
-            android:background="@drawable/thread_count_box_light" />
+            android:gravity="center"
+            android:text="25"
+            android:textColor="@color/icons"
+            android:textStyle="bold" />
     </LinearLayout>
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorPrimary"
-        android:id="@+id/view"
         android:layout_below="@+id/lnrlytRunningPro"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"/>
+        android:background="@color/colorPrimary"/>
     <com.pnikosis.materialishprogress.ProgressWheel
         android:id="@+id/progress"
-        android:layout_below="@+id/lnrlytRunningPro"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_below="@+id/lnrlytRunningPro"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:visibility="gone"
@@ -157,18 +130,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@+id/lnrlytRunningPro"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical">
 
         <ListView
+            android:id="@+id/listProcess"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listProcess"
+            android:layout_marginBottom="5dp"
             android:padding="10dp"
             android:transcriptMode="alwaysScroll"
-            android:visibility="visible"
-            android:layout_marginBottom="5dp">
+            android:visibility="visible">
 
         </ListView>
 
@@ -177,14 +150,14 @@
         android:id="@+id/buttonCleanRam"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:text="@string/clean_ram"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/view"
         android:layout_alignEnd="@+id/view"
         android:layout_alignLeft="@+id/view"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/view"
         android:layout_alignStart="@+id/view"
         android:layout_marginTop="5dp"
-        android:hapticFeedbackEnabled="true"/>
+        android:background="@color/colorPrimary"
+        android:hapticFeedbackEnabled="true"
+        android:text="@string/clean_ram"/>
 
 </RelativeLayout>
