Commit for version 1.2 -> Added Share Intent -> Coded for Internal Storage in FragmentStorage.java -> Added UpdateChecker library

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -63,7 +63,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:foreground="?android:attr/selectableItemBackground">
-                <!--<ImageView
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/imageViewProfilePic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
@@ -72,17 +74,6 @@
                     android:layout_marginTop="10dp"
                     android:maxWidth="80dp"
                     android:maxHeight="80dp"
-                    android:src="@drawable/about_javiersantos" />-->
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_marginLeft="@dimen/horizontal_margin"
-                    android:layout_marginStart="@dimen/horizontal_margin"
-                    android:layout_marginTop="10dp"
-                    android:maxWidth="80dp"
-                    android:maxHeight="80dp"
-                    android:src="@drawable/about_rudraksh_pahade"
                     android:scaleType="centerCrop"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
