--- a/app/src/main/res/layout/list_item_sms_row.xml
+++ b/app/src/main/res/layout/list_item_sms_row.xml
@@ -5,35 +5,60 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="5dp"
+        android:padding="5dp">
 
-        <TextView
-            android:id="@+id/txtSmsHeading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SMS Heading"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:fontFamily="sans-serif-thin"
+        <ImageView
+            android:id="@+id/imageViewSMSType"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@mipmap/sms_incoming"
             android:padding="10dp"
-            android:textColor="@color/colorAccent" />
-        <TextView
-            android:id="@+id/txtSmsBody"
-            android:layout_width="match_parent"
+            android:contentDescription="@string/app_name"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SMS Body"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:gravity="center_vertical"
-            android:fontFamily="sans-serif-thin"
-            android:padding="10dp"
-            android:textColor="@color/colorAccent" />
+            android:orientation="vertical"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
+
+            <TextView
+                android:id="@+id/txtSmsHeading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SMS Heading"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:fontFamily="sans-serif-thin"
+                android:padding="5dp"
+                android:textColor="@color/colorAccent" />
+            <TextView
+                android:id="@+id/txtSmsBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SMS Body"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:gravity="center_vertical"
+                android:fontFamily="sans-serif-thin"
+                android:padding="5dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/colorAccent" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
+
+
 
 </LinearLayout>
