Commit for version 1.3 -> Added SMS backup utility -> Added ListView Long Click listener and Context Menu for ListView

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,4 +25,12 @@
         <item>3</item>
         <item>4</item>
     </string-array>
+
+    <string-array name="sms_array">
+        <item>Open</item>
+        <item>Edit</item>
+        <item>Copy Text</item>
+        <item>Details</item>
+        <item>Delete</item>
+    </string-array>
 </resources>
