--- a/app/src/main/res/layout/list_item_sms_row.xml
+++ b/app/src/main/res/layout/list_item_sms_row.xml
@@ -4,87 +4,90 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/start_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="5dp"
-        android:padding="5dp">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_margin="5dp">
 
-        <ImageView
-            android:id="@+id/imageViewSMSType"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@mipmap/sms_incoming"
-            android:padding="10dp"
-            android:contentDescription="@string/app_name"
-            android:adjustViewBounds="true"
-            android:layout_gravity="center"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp">
 
-            <TextView
-                android:id="@+id/txtSmsHeading"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageViewSMSType"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@mipmap/sms_incoming"
+                android:padding="10dp"
+                android:contentDescription="@string/app_name"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SMS Heading"
-                android:textStyle="bold"
-                android:textSize="24sp"
-                android:fontFamily="sans-serif-thin"
-                android:padding="5dp"
-                android:textColor="@color/colorAccent" />
-            <TextView
-                android:id="@+id/txtSmsBody"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="SMS Body"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:fontFamily="sans-serif-thin"
-                android:padding="5dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/colorAccent" />
-            <TextView
-                android:id="@+id/txtSmsDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="SMS Person"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:fontFamily="sans-serif-thin"
-                android:padding="5dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/colorAccent" />
-            <TextView
-                android:id="@+id/txtSmsThreadId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Thread id"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:fontFamily="sans-serif-thin"
-                android:padding="5dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/colorAccent" />
+                android:orientation="vertical"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp">
+
+                <TextView
+                    android:id="@+id/txtSmsHeading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="SMS Heading"
+                    android:textStyle="bold"
+                    android:textSize="24sp"
+                    android:fontFamily="sans-serif-thin"
+                    android:padding="5dp"
+                    android:textColor="@color/colorAccent" />
+                <TextView
+                    android:id="@+id/txtSmsBody"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="SMS Body"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:gravity="center_vertical"
+                    android:fontFamily="sans-serif-thin"
+                    android:padding="5dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="@color/colorAccent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/about_libraries_card_dark"/>
+
+                <TextView
+                    android:id="@+id/txtSmsDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="SMS Date"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:gravity="center_vertical"
+                    android:fontFamily="sans-serif-thin"
+                    android:padding="5dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-    </LinearLayout>
-
-
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
