--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="primary">#F44336</color>
     <color name="primary_dark">#D32F2F</color>
     <color name="fab">#607D8B</color>
+    <color name="md_blue_grey_500">#607D8B</color>
+    <color name="md_blue_grey_700">#455A64</color>
+    <color name="md_purple_500">#9C27B0</color>
+    <color name="md_purple_700">#7B1FA2</color>
 
     <color name="text_primary">#212121</color>
     <color name="bkg_card">#8C9EFF</color>
